# linux-webauthn-platform-api

doc/: api.md
webext/add-on/: content.js
xyz-iinuwa-credential-manager-portal-gtk/: Cargo.toml
xyz-iinuwa-credential-manager-portal-gtk/data/resources/ui/: window.ui
xyz-iinuwa-credential-manager-portal-gtk/src/: dbus.rs  webauthn.rs  window.rs
xyz-iinuwa-credential-manager-portal-gtk/src/credential_service/: hybrid.rs  mod.rs  usb.rs
xyz-iinuwa-credential-manager-portal-gtk/src/platform_authenticator/: mod.rs
xyz-iinuwa-credential-manager-portal-gtk/src/view_model/: mod.rs
xyz-iinuwa-credential-manager-portal-gtk/src/view_model/gtk/: mod.rs
