[package]
name = "xyz-iinuwa-credential-manager-portal-gtk"
version = "0.1.0"
authors = ["Isaiah Inuwa <isaiah.inuwa@gmail.com>"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
async-std = { version = "1.13.1", features = ["unstable"] }
base64 = "0.22.1"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_6"] }
openssl = "0.10.72"
ring = "0.17.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
# serde_cbor = "0.11.1"
tracing = "0.1.41"
tracing-subscriber = "0.3"
zbus = "5.5.0"
libwebauthn = { git = "https://github.com/linux-credentials/libwebauthn", rev = "73970627b81ff775fbd80fb70694bef049ac2c85" }
async-trait = "0.1.88"
tokio = { version = "1", features = ["rt-multi-thread"] }
futures-lite = "2.6.0"

qrcode = "0.14.1"
# this is temporary until we move COSE -> Vec<u8> serialization methods into libwebauthn
cosey = "0.3.2"
